project(MySQLParser)
cmake_minimum_required(VERSION 2.6)
SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -g -fPIC --std=gnu99")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -g -fPIC --std=c++0x")
include_directories(/home/ds/alisql57/include)
include_directories(../drc-message)
include_directories(../meta)
include_directories(../sqlparser)
include_directories(/home/ds/include/antlr3c)
include_directories(../mysql-binlog-reader)
include_directories(../../../../../lib/util/memlib)
include_directories(../../../../../lib/util/)
include_directories(./mysql_funcs)

ADD_DEFINITIONS(-DCOMPARE_UPDATE)

aux_source_directory(. mysqlParser)
aux_source_directory(./mysql_funcs mysql_funcs)
add_library(MySQLParser SHARED ${mysqlParser} ${mysql_funcs})

find_library(mysql_client libmysqlclient.a /home/ds/alisql57/lib)
if (NOT mysql_client)
   message(FATAL_ERROR "lib mysqlclient not found")
endif()
find_library(memp  libmemp.so ../../../../../lib/util/memlib/)
if (NOT memp)
   message(FATAL_ERROR "lib memp not found")
endif()
target_link_libraries(MySQLParser ${mysql_client})
target_link_libraries(MySQLParser ${memp})
