#datasource
aux_source_directory(. dataSourceDir)
aux_source_directory(./localLogFileCache logFile)
aux_source_directory(./transactionCache transCache)
add_library(dataSource SHARED ${dataSourceDir} ${logFile} ${transCache})
TARGET_LINK_LIBRARIES(dataSource  util databaseInstance meta ${GLOG} ${GFLAGS})
target_include_directories(dataSource PUBLIC ${BASE_INCLUDE_PATH} ${GLOG_INCLUDE_PATH} ${GLFAG_INCLUDE_PATH})
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	TARGET_LINK_LIBRARIES(dataSource dl)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
message(STATUS "dir: ${CMAKE_INSTALL_LIBDIR}")
INSTALL(TARGETS dataSource LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR})
ADD_SUBDIRECTORY(mysqlDataSource)
ADD_SUBDIRECTORY(oracleDataSource)
ADD_SUBDIRECTORY(localLogFileCache/unittest)
