
#oracleClient
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	SET(ORACLE_INCLUDE_PATH "${THIRDPARTY}/oracle/linux/include")
	find_library(ORACLE_CLIENT_OCIEI ociei PATHS "thirdParty/oracle/linux/lib")
	if(NOT ORACLE_CLIENT_OCIEI)
	message(FATAL_ERROR "ociei not found")
	endif()
	find_library(ORACLE_CLIENT_CLNTSH  clntsh  PATHS "thirdParty/oracle/linux/lib")
	if(NOT ORACLE_CLIENT_CLNTSH)
	message(FATAL_ERROR "clntsh not found")
	endif()
	find_library(ORACLE_CLIENT_CLNTSHCORE clntshcore PATHS "thirdParty/oracle/linux/lib")
	if(NOT ORACLE_CLIENT_CLNTSHCORE)
	message(FATAL_ERROR "clntshcore not found")
	endif()
	find_library(ORACLE_CLIENT_NNZ21 NAMES nnz21 PATHS "thirdParty/oracle/linux/lib")
	if(NOT ORACLE_CLIENT_NNZ21)
	message(FATAL_ERROR "nnz21 not found")
	endif()
	find_library(ORACLE_CLIENT_OCCI  occi PATHS "thirdParty/oracle/linux/lib")
	if(NOT ORACLE_CLIENT_OCCI)
	message(FATAL_ERROR "occi not found")
	endif()
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
	SET(ORACLE_INCLUDE_PATH "${THIRDPARTY}/oracle/windows/include")
	find_library(ORACLE_CLIENT_ORAOCCI  oraocci19d  PATHS "thirdParty/oracle/windows/lib/")
	if(NOT ORACLE_CLIENT_ORAOCCI)
        message(FATAL_ERROR "oraocci19d not found")
	endif()
	find_library(ORACLE_CLIENT_OCI  oci  PATHS "thirdParty/oracle/windows/lib/")
	if(NOT ORACLE_CLIENT_OCI)
        message(FATAL_ERROR "oci not found")
	endif()
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

#oracleDataSource
aux_source_directory(. oracleDataSourceDir)
add_library(oracleDataSource SHARED ${oracleDataSourceDir})
target_include_directories(oracleDataSource PUBLIC ${BASE_INCLUDE_PATH} ${GLOG_INCLUDE_PATH} ${GLFAG_INCLUDE_PATH})
target_include_directories(oracleDataSource PRIVATE ${ORACLE_INCLUDE_PATH})
message(STATUS "pwd: ${ORACLE_INCLUDE_PATH}")
TARGET_LINK_LIBRARIES(oracleDataSource util thread store meta ${GLOG} ${GFLAGS})
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	TARGET_LINK_LIBRARIES(oracleDataSource pthread ${ORACLE_CLIENT_OCIEI} ${ORACLE_CLIENT_CLNTSH} ${ORACLE_CLIENT_NNZ21} ${ORACLE_CLIENT_OCCI})
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
	TARGET_LINK_LIBRARIES(oracleDataSource ${ORACLE_CLIENT_ORAOCCI} ${ORACLE_CLIENT_OCI})
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
INSTALL(TARGETS oracleDataSource LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR})
ADD_SUBDIRECTORY(unittest)