ADD_EXECUTABLE(testOracleConect  testOracleConnect.cpp)
TARGET_LINK_LIBRARIES(testOracleConect util dataSource oracleDataSource ${GLOG})
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	TARGET_LINK_LIBRARIES(testOracleConect pthread)
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
target_include_directories(testOracleConect PUBLIC)
target_include_directories(testOracleConect PRIVATE ${ORACLE_INCLUDE_PATH})
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
	TARGET_LINK_LIBRARIES(testOracleConect ${ORACLE_CLIENT_OCIEI} ${ORACLE_CLIENT_CLNTSH} ${ORACLE_CLIENT_NNZ21} ${ORACLE_CLIENT_OCCI})
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")
	TARGET_LINK_LIBRARIES(testOracleConect ${ORACLE_CLIENT_ORAOCCI} ${ORACLE_CLIENT_OCI})
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")

INSTALL(TARGETS testOracleConect RUNTIME DESTINATION ${UT_EXECUTABLE_OUTPUT_PATH})